# gruvboard

./: .gitignore  CLAUDE.md  README.md  config.toml  dev.sh  justfile  pyproject.toml
backend/: config.py  db.py  main.py
backend/models/: schemas.py
backend/routers/: apps.py  events.py  services.py  system.py
backend/services/: health_checker.py  metrics_collector.py  systemd_monitor.py
backend/services/app_apis/: caddy.py  ollama.py
backend/utils/: sse.py
deploy/: gruvboard.service
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  globals.css
frontend/src/components/common/: MetricGauge.tsx  RingGauge.tsx  SparkLine.tsx  StatusBadge.tsx
frontend/src/components/dashboard/: AppCard.tsx  AppGrid.tsx  CategorySection.tsx
frontend/src/components/drilldown/: AppDrawer.tsx  HealthChart.tsx  ServiceControls.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx  SystemBar.tsx
frontend/src/hooks/: useAppHistory.ts  useApps.ts  useSystemMetrics.ts
frontend/src/lib/: api.ts  sse.ts  utils.ts
frontend/src/types/: app.ts  events.ts  system.ts
frontend/src/widgets/: CaddyWidget.tsx  GenericWidget.tsx  OllamaWidget.tsx  registry.ts  types.ts
tests/: conftest.py  test_config.py  test_db.py  test_health_checker.py  test_metrics.py  test_routers.py
